After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 739239 - gcr: Fix a couple of GSource leaks
gcr: Fix a couple of GSource leaks
Status: RESOLVED FIXED
Product: gcr
Classification: Core
Component: General
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME keyring maintainer(s)
GNOME keyring maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-10-27 13:25 UTC by Philip Withnall
Modified: 2019-02-22 11:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gcr: Fix a couple of GSource leaks (1.76 KB, patch)
2014-10-27 13:25 UTC, Philip Withnall
committed Details | Review

Description Philip Withnall 2014-10-27 13:25:41 UTC
Trivial patch attached.
Comment 1 Philip Withnall 2014-10-27 13:25:44 UTC
Created attachment 289409 [details] [review]
gcr: Fix a couple of GSource leaks

g_source_destroy() does not decrement the GSource’s reference count.
Comment 2 Stef Walter 2014-10-31 15:46:46 UTC
Attachment 289409 [details] pushed as 14c4c91 - gcr: Fix a couple of GSource leaks