gcr: Fix a couple of GSource leaks

g_source_destroy() does not decrement the GSource’s reference count.

https://bugzilla.gnome.org/show_bug.cgi?id=739239